src/test/deca/context/invalid/variable/invalid_var_assign_int_boolean.deca
// Description:
//    test invalid assignation between bool and int
//    Test rule 3.28
//
// [Begin Result]
//invalid_var_assign_int_boolean.deca:14:15: Incompatible types, expected boolean but got int. Rule 3.28.
// [End Result]
//
// History:
//    created on 06/01/2025

{
   int a = 1;
   boolean b = a;
}
